More data and updated README

--- a/code/settings.ini
+++ b/code/settings.ini
@@ -18,4 +18,4 @@ HTML_FOLDER_OF_ERROR_ANALYSIS_OUTPUT = working/html
 [version_1]
 TAG = 20210331
 ANNOTATED_FILE = annotations.csv
-DATA_FILE_TO_WORK = id_date_text.csv
+DATA_FILE_TO_WORK = sample_tweetid_bioid_text.csv
